--- a/cobra/templates/email/activation.html
+++ b/cobra/templates/email/activation.html
@@ -10,8 +10,9 @@
 
 {% block content %}
 
-{%translate "Hi" %} <strong>{{user.get_full_name}}<strong>,
+{%translate "Hi" %} {{user.get_full_name}},
 
-{% translate "To finish your registration at "%}{% settings_value "APPLICATION_NAME" %}, {%translate "please follow the link" %}: {{activation_url}}.
+{% translate "To finish your registration at "%}<strong>{% settings_value "APPLICATION_NAME" %}<strong>,
+{%translate "please follow the " %}: <a href="{{activation_url}}">{% translate "link" %}</a>.
 
 {% endblock %}
