--- a/cobra/templates/email/project_invitation.html
+++ b/cobra/templates/email/project_invitation.html
@@ -12,7 +12,7 @@
 
 {% translate "Hi" %} {{user.get_full_name}},
 
-{% translate "User "%}<strong>{{inviter.get_full_name}}</strong>{% translate " invites you to work together on " %}<strong>{{project.title}}</strong>{% translate " at " %}<strong>{% settings_value "APPLICATION_NAME" %}<strong>.
+{% translate "User "%}<strong>{{inviter.get_full_name}}</strong>{% translate " invites you to work together on " %}<strong>{{project.title}}</strong>{% translate " at " %}<strong>{% settings_value "APPLICATION_NAME" %}</strong>.
 {% translate "Please, follow the " %}<a href="{{invitation_url}}">{% translate "link" %}</a>{% translate " to accept the invitation." %}
 
 {% endblock %}
