--- a/cobra/templates/email/activation.html
+++ b/cobra/templates/email/activation.html
@@ -12,7 +12,7 @@
 
 {% translate "Hi" %} {{user.get_full_name}},
 
-{% translate "To activate your account at "%}<strong>{% settings_value "APPLICATION_NAME" %}<strong>,
+{% translate "To activate your account at "%}<strong>{% settings_value "APPLICATION_NAME" %}</strong>,
 {%translate "please follow the " %}: <a href="{{activation_url}}">{% translate "link" %}</a>.
 
 {% endblock %}
