--- a/cobra/templates/email/password_reset.html
+++ b/cobra/templates/email/password_reset.html
@@ -12,7 +12,7 @@
 
 {% translate "Hi" %} {{user.get_full_name}},
 
-{% translate "To reset your password at "%}<strong>{% settings_value "APPLICATION_NAME" %}<strong>,
+{% translate "To reset your password at "%}<strong>{% settings_value "APPLICATION_NAME" %}</strong>,
 {%translate "please follow the " %}: <a href="{{password_reset_url}}">{% translate "link" %}</a>.
 
 {% endblock %}
